--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </ul>
     </div>
 </div>
-<!-- E: 顶端购物车栏    null    null -->
+<!-- E: 顶端购物车栏    -->
 <!-- Start: LOGO+Search    null    null -->
 <div id="header_mid" class="header_mid">
     <div class="wrap clearfix">
